--- a/style.css
+++ b/style.css
@@ -114,11 +114,11 @@ body{
 }
 
 .app-download:nth-child(1) {
-    background-image: url('./apple-button.png');
+    background-image: url('./img/apple-button.png');
 }
 
 .app-download:nth-child(2) {
-    background-image: url('./googleplay-button.png');
+    background-image: url('./img/googleplay-button.png');
 }
 
 /* tornado responsivel*/
